# viam-pi-hailo-ml

./: .gitignore  .viam-gen-info  README.md  meta.json  mise.toml  pyproject.toml  run.sh  setup.sh
.github/workflows/: deploy.yml
src/: hailort_vision.py  main.py
test/: demo.py
